<resources>
    <string name="app_name">Givol</string>

    <!-- Actions -->
    <string name="action_drawer" translatable="false">תפריט</string>
    <string name="action_cancel" translatable="false">סגור</string>
    <string name="action_back" translatable="false">חזרה</string>

    <!-- Drawer -->>
    <string name="active_contest">תחרויות פעילות</string>
    <string name="won_contest">תחרויות שניצחתי</string>
    <string name="finished_contest">תחרויות שהסתיימו</string>

    <!-- Error messages -->
    <string name="internet_failure_error">בעיית חיבור לרשת</string>
    <string name="error_general">אופס! יש לנו תקלה…</string>
    <string name="error_general_subtitle">אנא נסה שוב מאוחר יותר</string>
    <string name="error_fb_general">שגיאה!</string>
    <string name="error_fb_general_sub">משהו לא בסדר…</string>
    <string name="error_fb_user_collision">משתמש זה כבר רשום</string>
    <string name="error_fb_weak_password">סיסמא חלשה מדיי</string>
    <string name="error_fb_invalid_credentials">הפרטים אינם תואמים</string>
    <string name="error_fb_invalid_user">כנראה שעוד לא נרשמת…</string>
    <string name="error_fb_">סיסמא חלשה מדיי</string>

    <!-- Dialogs -->
    <string name="dialog_success_default_title" translatable="false">הצלחה!</string>
    <string name="dialog_positive_ok" translatable="false">אוקיי</string>
    <string name="dialog_negative_cancel" translatable="false">ביטול</string>

    <!-- SignIn screen -->
    <string name="sign_in">התחברות</string>
    <string name="sign_up">הרשמה</string>
    <string name="dont_have_account">עוד לא נרשמת? להרשמה</string>
    <string name="sign_in_user_name">שם משתמש</string>
    <string name="sign_in_password">סיסמא</string>
    <string name="sign_in_missing_user_name">שם משתמש חסר</string>
    <string name="sign_in_missing_password">סיסמא חסרה</string>
    <string name="sign_in_short_password">על הסיסמא להיות באורך של לפחות %d תווים</string>
    <string name="login_error_general">שגיאת התחברות, אנא נסה שוב</string>
    <string name="signup_error_general">שגיאת הרשמה, אנא נסה שוב</string>

    <!-- Main contest texts -->
    <string name="participants_title">משתתפים:</string>
    <string name="participants_data">%d/%d</string>
    <string name="due_date_title">מועד סיום:</string>
    <string name="amount_title">שווי ההגרלה:</string>
    <string name="contest_winning_state_title">מצב הגרלה:</string>
    <string name="amount_data">%d ₪</string>
    <string name="no_contests_main_screen">אנחנו עובדים על הגרלות חדשות בשבילכם,\n שווה להתעדכן בקרוב :)</string>

    <!-- Content description -->
    <string name="contest_image_description">תמונת תחרות</string>
    <string name="contest_began">ההגרלה בתהליך…</string>

    <!-- Contest details screen -->
    <string name="business_details">פרטי העסק</string>
    <string name="register_to_contest">השתתפות</string>
    <string name="use_contest_reward">מימוש</string>
    <string name="already_registered_to_contest">הנך רשום</string>
    <string name="non_eligibility_dialog_title">הרשמה להגרלה נדחתה</string>
    <string name="non_eligibility_dialog_subtitle">כל משתמש זכאי להירשם לעד %d הגרלות בכל רגע.</string>
    <string name="contest_id">קוד תחרות:</string>

    <!-- Finished contests screen -->
    <string name="no_contests_title">אין תחרויות עבר</string>
    <string name="no_contests_subtitle">על מנת לראות תחרויות שהסתיימו, תחילה צריך להירשם לאחת :)</string>

    <string name="use_contest_reward_title">מימוש קופון תחרות</string>
    <string name="use_contest_reward_subtitle">האם לממש פרס התחרות?</string>
    <string name="use_contest_reward_positive">מימוש</string>
    <string name="use_contest_reward_negative">עוד לא</string>

    <!-- Business details screen -->
    <string name="business_name">שם העסק:</string>
    <string name="business_address">כתובת:</string>
    <string name="business_phone">טלפון:</string>
    <string name="business_web">אתר:</string>
    <string name="business_mail">מייל:</string>
    <string name="business_description">הסבר:</string>

    <!-- Finished running contest dialog texts -->
    <string name="finished_run_contest_title">הגרלת תחרויות הסתיימה בהצלחה</string>
    <string name="finished_run_contest_subtitle">אלו הן התחרויות שהסתיימו על פי מספרן הסידורי: %s</string>
    <string name="finished_run_contest_positive">מצויין!</string>

</resources>