<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/global_margin_top"
        android:src="@drawable/ic_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameTextInputLayout"
        style="@style/MyTextInputLayout"
        android:layout_width="@dimen/_222sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        app:hintTextAppearance="@style/HintTextInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoIv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameTextInputEditText"
            style="@style/MyTextInputEditText"
            android:layout_width="@dimen/_222sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_regular"
            android:hint="@string/sign_in_user_name"
            android:textCursorDrawable="@drawable/color_cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        style="@style/MyTextInputLayout"
        android:layout_width="@dimen/_222sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        app:hintTextAppearance="@style/HintTextInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameTextInputLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInputEditText"
            style="@style/MyTextInputEditText"
            android:layout_width="@dimen/_222sdp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_regular"
            android:hint="@string/sign_in_password"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/color_cursor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_sign_in"
        android:layout_width="@dimen/_222sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/shapelogin"
        android:fontFamily="@font/seguisb"
        android:padding="@dimen/_5sdp"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>